avenc_aac: do not preserve silence on channel when encoding
I have this stereo test wav, with actual sound on one channel and silence on the other:
Encoding it with avenc_aac
:
gst-launch-1.0 filesrc location=stereo.wav ! wavparse ! audioconvert ! avenc_aac ! aacparse ! queue ! qtmux ! filesink location=out.mp4
The generated audio now has sound on both tracks!
This work fine when using fdkaacenc
instead or when encoding with ffmpeg
:
ffmpeg -i stereo.wav -c:a aac -b:a 193k ffmpeg.mp4